tests/baselines/reference/MemberFunctionDeclaration1_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration1_es6.ts(2,4): error TS9001: 'generators' are not currently supported.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration1_es6.ts (1 errors) ====
    class C {
       *foo() { }
       ~
!!! error TS9001: 'generators' are not currently supported.
    }